--- a/index.html
+++ b/index.html
@@ -138,8 +138,8 @@
         <div class="profile-content">
           <div class="ml-1 pt-3">
             <p><strong>Email:</strong> vikasshambhu1000@gmail.com</p>
-            <p><strong>Personal Website :</strong><a href="https://myportfolio7778.netlify.com/" target="_blank"> Click Here</a></p>
-            <p><strong>GitHub :</strong><a href="https://github.com/Vicky4771" target="_blank"> Click Here</a></p>
+            <p><strong>Personal Website :</strong><a href="https://portfolio6543.netlify.app/" target="_blank"> Click Here</a></p>
+            <p><strong>GitHub :</strong><a href="https://github.com/Vikas6543" target="_blank"> Click Here</a></p>
             <p><strong>Location :</strong> Bidar, Karnataka</p>
             <p
               ><strong>Phone :</strong
