--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
       </div>
 
       <!-- Karnataka -->
-      <h4 class="text-center update-title pb-2 mt-5">Throughout Karnataka</h4>
+      <h4 class="text-center update-title pb-2 mt-5">Throughout AndhraPradesh</h4>
       <div class="today text-center pt-3">
         <h6><i class="fas fa-caret-right pr-1 animated fadeInLeft infinite slow"></i>Todays +ve Cases = <span id="kar-today-confirmed">0</span></h4>
         <h6><i class="fas fa-caret-right pr-1 animated fadeInLeft infinite slow"></i>Todays Death Cases = <span id="kar-today-deaths">0</span></h6>
@@ -126,24 +126,23 @@
     <div class="card-container mt-2" data-aos="fade-right">
       <div class="upper-container">
         <div class="image-container">
-          <img src="img/BeautyPlus_20181031122157921_save.jpg" />
+          <img src="Developer.jpg" />
         </div>
       </div>
 
       <div class="lower-container pb-1">
         <div>
-          <p class="text-center name  pt-2" data-aos="zoom-in">Vikas.s</p>
+          <p class="text-center name  pt-2" data-aos="zoom-in">Prathyusha.R</p>
           <h4 class="text-center pb-3">Front-end Developer</h4>
         </div>
         <div class="profile-content">
           <div class="ml-1 pt-3">
-            <p><strong>Email:</strong> vikasshambhu1000@gmail.com</p>
-            <p><strong>Personal Website :</strong><a href="https://portfolio6543.netlify.app/" target="_blank"> Click Here</a></p>
-            <p><strong>GitHub :</strong><a href="https://github.com/Vikas6543" target="_blank"> Click Here</a></p>
-            <p><strong>Location :</strong> Bidar, Karnataka</p>
+            <p><strong>Email:</strong>rpratyusha98@gmail.com</p>
+            <p><strong>GitHub :</strong><a href="https://github.com/prathyusharompicharla" target="_blank"> Click Here</a></p>
+            <p><strong>Location :</strong> Kollur, AndhraPradesh</p>
             <p
               ><strong>Phone :</strong
-              ><a href="tel:+91 8880-889484"> 8880 - 889484</a></p
+              ><a href="tel:+91 8106216195"> 8106216195</a></p
             >
           </div>
         </div>
@@ -161,8 +160,8 @@
     <p
       >Designed & Developed by
       <strong>
-        Vikas . S </strong
-      >| <span>CSE</span> department | <strong>GNDEC </strong>Bidar .
+       Prathyusha.R</strong
+      >| <span>CSE</span> department | <strong>Guntur </strong>AP .
     </p>
     <p>© 2020 Copyright : All Rights Reserved.</p>
   </div>
